[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybenzdb"
version = "0.1.0"
authors = [
    {name = "Cyril Terrioux", email = "cyril.terrioux@univ-amu.fr"},
]
description = "Description courte de ton package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/terrioux/pybenzdb"

[project.dependencies]
requests = "^2.28.0"
numpy = "^1.24.0"