[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pybenzdb"
version = "1.0.0"
authors = [
    {name = "BenzDB team", email = "cyril.terrioux@univ-amu.fr"},
]
description = "This package provides tools for querying the BenzDB database (https://benzenoids.lis-lab.fr/)"
readme = "README.md"
requires-python = ">=3.8"

license = {text = "AGPL-3.0-or-later"}

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
        "ipython>=9.13.0",
        "ipywidgets>=8.1.8",
        "jupyter_jsmol>=2022.1.0",
        "matplotlib>=3.10.9",
        "pandas>=3.0.3",
        "pillow>=12.2.0",
        "requests>=2.34.2",
        "xlsxwriter>=3.2.9"
]